--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-browserify": "^0.5.1",
     "gulp-ng-annotate": "^2.0.0",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "vorpal": "^1.10.10"
   }
 }
