--- a/boilerplate/package.json
+++ b/boilerplate/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "dependencies": {
-    "angular-nadobit-app": "^{{nadoapp-version}}"
+{{vendor-package}}
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
