--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular": "^1.5.5",
     "angular-ui-router": "^0.3.0",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-angular-gettext": "^2.2.0",
     "gulp-browserify": "^0.5.1",
     "gulp-concat-util": "^0.5.5",
     "gulp-less": "^3.1.0",
